--- a/project_writeup/MS_PhD_Winter_2017.html
+++ b/project_writeup/MS_PhD_Winter_2017.html
@@ -78,5 +78,7 @@ Strong desire to pick up combustion kinetics concepts (no prior familiarity is r
 </table>
 
 
-<a href="http://krithikasivaram.github.io/index.html#Available_research_projects" style="color: rgb(0,100,100)"> <h1> <center>More topics that are open</center> </h1> </a>
+<!-- <a href="http://krithikasivaram.github.io/index.html#Available_research_projects" style="color: rgb(0,100,100)"> <h1> <center>More topics that are open</center> </h1> </a> -->
+More topics that are open are listed under the tab <i> available projects</i>
+
 </body></html>
