--- a/project_writeup/MS_PhD_Winter_2017.html
+++ b/project_writeup/MS_PhD_Winter_2017.html
@@ -79,6 +79,6 @@ Strong desire to pick up combustion kinetics concepts (no prior familiarity is r
 
 
 <!-- <a href="http://krithikasivaram.github.io/index.html#Available_research_projects" style="color: rgb(0,100,100)"> <h1> <center>More topics that are open</center> </h1> </a> -->
-More topics that are open are listed under the tab <i> available projects</i>
+<h1> <center> More topics are listed under the tab <i> available projects</i> </center> </h1>
 
 </body></html>
