--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 </table>
 
 <h2> <a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank"> <center><i>Abstracts for topics floated for MS/PhD admissions (Winter 2017)</i></center></a></h2>
+<h2> <a href="project_writeup/MTech_DD_2017.html" target="_blank"> <center><i>Possible M. Tech/DD projects</i></center></a></h2>
 
 <!-- <table>
 	<tr>
@@ -297,27 +298,28 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 
 <div class="mySlides fade">
   <center> <img src="research_highlights/component_library_mixmatch.png" style="width:80%"> 
-  <br> A flexible and evolutive component library framework has been proposed to derive short chemical mechanisms with only the necessary kinetics for the desired surrogate mixture. Figure showd the chemical model developed  our earlier works reorganized into this framework. A script to extract a chem- ical mechanism for a surrogate mixture, the kinetics of whose individual components are described in this parent chemical mechanism, is available under the tab <i> publications</i> </center>
+  <br> <p style="text-align:left;"> A flexible and evolutive component library framework has been proposed to derive short chemical mechanisms with only the necessary kinetics for the desired surrogate mixture. Figure showd the chemical model developed  our earlier works reorganized into this framework. A script to extract a chem- ical mechanism for a surrogate mixture, the kinetics of whose individual components are described in this parent chemical mechanism, is available under the tab <i> publications</i> </p> </center>
 </div>
 
 <div class="mySlides fade">
   <center> <img src="research_highlights/tig_phi1_jetSurrogate_P20.png" style="width:80%"> 
-  <br> Ignition delay times of JP-8/Jet-A fuels at stoichiometric fuel/air equivalence ratios: Symbols - experimental data from several sources. Simulations are performed by representing the real jet fuel as a surrogate containing 30.3% n-dodecane, 21.2% m-xylene, and 48.5% methylcyclohexane (mole %). The kinetics of this surrogate mixture are extracted from a multi-component reaction mechanism using the component library approach.  </center>
+  <br> <p style="text-align:left;">  Ignition delay times of JP-8/Jet-A fuels at stoichiometric fuel/air equivalence ratios: Symbols - experimental data from several sources. Simulations are performed by representing the real jet fuel as a surrogate containing 30.3% n-dodecane, 21.2% m-xylene, and 48.5% methylcyclohexane (mole %). The kinetics of this surrogate mixture are extracted from a multi-component reaction mechanism using the component library approach.  </center>
 </div>
 
-
+<!-- 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
+-->
 </div>
 <br>
 
-<div style="text-align:center">
+<!-- <div style="text-align:center">
   <span class="dot" onclick="currentSlide(1)"></span> 
   <span class="dot" onclick="currentSlide(2)"></span> 
   <span class="dot" onclick="currentSlide(3)"></span> 
   <span class="dot" onclick="currentSlide(4)"></span> 
 </div>
+-->
 
 </div>
 
@@ -633,6 +635,7 @@ Write-up coming soon ...
 </table>
 
 <h2> <a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank"> <center><i>Abstracts for topics floated for MS/PhD admissions (Winter 2017)</i></center></a></h2>
+<h2> <a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank"> <center><i>M. Tech/DD projects</i></center></a></h2>
 
 </div>
 	
