MTech/DD project update

--- a/project_writeup/MTech_DD_2017.html
+++ b/project_writeup/MTech_DD_2017.html
@@ -20,60 +20,53 @@ table, th, td {
 </style>
 </head>
 
-<center><h2> Topics for M .Tech programme</h2></center>
+<center><h2> Brief outline for M .Tech/DD projects</h2></center>
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td width="100%">
 	<h3> Automatic mechanism generation </h3> 
 	<!-- <h3> Category: M.S (can be extended to a PhD) </h3> -->
 
-Codes to generate mechanisms for any hydrocarbon fuel. Some existing codes do this -- can we do better?
+The aim is to develop stand alone code to generate mechanisms for any hydrocarbon fuel. This has already been done across the world -- but the challenge is if we can build one on our own and can we do better than the exisiting ones and how. As a second part of the work, one of the earlier stand-alone codes on estimating thermochemical properties will be extended to consider cyclic alkanes. Check this out under the <i>publications (open source codes) </i> tab. 
 <!-- <a "" >More to read on ... </a>. -->
-
-</tr>
 
 <tr>
 <td width="100%">
 	<h3> Simulation driven surrogate formulation </h3> 
 	<!-- <h3> Category: M.S (can be extended to a PhD) </h3> -->
 
-Can simulations be used to define surrogates (representative mixtures) for real fuels? We have made some progress on this along with a preliminary code development exercise -- can this be more flexible and meaningful is the question ...
+Can simulations be used to define surrogates (representative mixtures) for real fuels? We have made some progress on this along with a preliminary code development exercise. How we make this more flexible and meaningful is the challenging question.
 
 
 <tr>
 <td width="100%">
-	<h3> Solver for homogeneous reactors </h3> 
+	<h3> Solver for homogeneous reactors and analysis tools </h3> 
 	<!-- <h3> Category: M.S (can be extended to a PhD) </h3> -->
 
-Homogenous reactor configurations are often used to validate kinetic models. The objective is to develop a stand alone in-house solver for simulating these configurations.
+Homogenous reactor configurations are often used to validate kinetic models. The objective is to develop a stand alone in-house solver for simulating these configurations. As the second part of the work, the aim is to develop a GUI based interface to path flux analysis (through which routes does the reaction system evolve the most) commonly used in kinetic model development.
 
 <tr>
 <td width="100%">
-	<h3> Analysis tools </h3> 
-	<!-- <h3> Category: M.S (can be extended to a PhD) </h3> -->
+	<h3> Correlations for cetane numbers of a mixture</h3> 
 
-Path flux analysis (through which paths does the reaction system evolve the most) is commonly used in kinetic model development. The aim is to develop a GUI based interface to ease this analysis.
-
+Sooting index of a mixture can be estimated from those of its components through simple mixing rule, while such a rule for cetane numbers is not straightforward. This project involves a thorough analysis of the database for cetane numbers of hydrocarbon fuels and arriving at a possible correlation. What is more challenging is to assess if the cetane numbers of oxygenated fuels, such as long chain esters (found in bio-derived fuels) can be understood the same way?
 <!-- <a "" >More to read on ... </a>. -->
-
-</tr>
-
-<tr>
-<td width="100%">
-	<h3> TSI vs CN </h3> 
-	<!-- <h3> Category: M.S (can be extended to a PhD) </h3> -->
-
-<!-- <a "" >More to read on ... </a>. -->
-
-</tr>
 
 <tr>
 <td width="100%">
 	<h3> Kinetics of butyl cyclohexane </h3> 
 	<!-- <h3> Category: M.S (can be extended to a PhD) </h3> -->
 
-What is the importance of cycloakane representatives in real fuel surrogates? The aim is to investigate two cyclohexanes -- {\it n}-butylcyclohexane and methylcyclohexane and explore their role as real fuel surrogates.
+What is the importance of side chain length of cycloakane representatives in jet fuel surrogates? We will investigate two cyclohexanes -- n-butylcyclohexane and methylcyclohexane and explore their role as real fuel surrogates. While a kinetic model is available with us for the latter, a reaction scheme for n-butyl cyclohexane has to be arrived at and integrated with an existing master kinetic model as the first task on this topic. Getting grips with kinetic model development is an important part of this project.
 <!-- <a "" >More to read on ... </a>. -->
+
+<tr>
+<td width="100%">
+	<h3> Kinetics of iso-alkanes </h3> 
+	<!-- <h3> Category: M.S (can be extended to a PhD) </h3> -->
+Can the effect of cycloakane representative in real fuel surrogates be imitated by iso-alkanes? The aim is to investigate the common branched alkanes, iso-octane and iso-cetane and explore their role as real fuel surrogates in place of cycloalkanes. As a first task, reaction scheme for iso-alkanes have to be arrived at and integrated with an existing master kinetic model. Getting grips with kinetic model development is an important part of this project.
+<!-- <a "" >More to read on ... </a>. -->
+
 
 </tr>
 </table>
