MTech/DD project update

--- a/project_writeup/MTech_DD_2017.html
+++ b/project_writeup/MTech_DD_2017.html
@@ -71,6 +71,6 @@ Can the effect of cycloakane representative in real fuel surrogates be imitated 
 </tr>
 </table>
 
-<h3>Pre-requisites:</h3> Penchant for writing stand-alone codes and interest in combustion, strong desire to pick up combustion kinetics concepts (no prior familiarity is required)
+<h3>Pre-requisites:</h3> Penchant for writing stand-alone codes and interest in combustion, strong desire to pick up combustion kinetics concepts (no prior familiarity is required for kinetics)
 
 </body></html>
