--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 </td>
 
 <td width="50%">
-<img src="./images/wordle.png" width="600">	
+<img src="./images/wordcloud.png" width="800">	
 </td>
 </tr>
 </table>
