Add wordcloud reference

--- a/index.html
+++ b/index.html
@@ -678,6 +678,7 @@ Write-up coming soon ...
 <a href="http://www.tutorialspoint.com/codingground.htm" target="_blank">Coding ground</a></br>
 <a href="https://www.overleaf.com" target="_blank">WriteLaTeX</a></br>
 <a href="http://detexify.kirelabs.org/classify.html" target="_blank">Detexify</a></br>
+<a href="https://www.wordclouds.com" target="_blank">WordClouds</a><br>
 </td>
 </tr>
 </table>
