--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ div.tab button.active {
     background-color: DarkOrange;
 }
 
+
 /* !!!!!!!!!!!!!!!!!!!!!!!! SLIDE SHOW !!!!!!!!!!!!!!!!!!!!! */
 /*Slide show trial */
 * {box-sizing:border-box}
@@ -260,9 +261,9 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 </td>
 
 <td width="50%">
-<img src="./images/wordcloud.png" width="600">	
+<center><img src="./images/wordcloud.png" width="600">
 </td>
-</tr>
+
 </table>
 
 <br>
@@ -272,15 +273,12 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 	My research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions.   
 </br> </br> <i>If you are interested in being a part of our team, peruse the list of available projects to identify your interests and write to me with a subject line that includes the title of the topic.</i>
 </td>
-</tr> 
+</tr>
 </table>
 
 <h2> <a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank"> <center><i>Abstracts for topics floated for MS/PhD admissions (Winter 2017)</i></center></a></h2>
 <h2> <a href="project_writeup/MTech_DD_2017.html" target="_blank"> <center><i>Possible M. Tech/DD projects</i></center></a></h2>
 
-<!-- <table>
-	<tr>
-		<td width = 100%> -->
 <h1><center> Research highlights </center></h1>
 <!-- Slide show from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_slideshow-->
 <div class="slideshow-container">
@@ -323,10 +321,6 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 
 </div>
 
-<!-- </tr>
-</td>
-</table> -->
-
 <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 <div id="Current_Research" class="tabcontent">
 </tr>
@@ -336,7 +330,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 
 <h2>Research Team</h2>
 <!-- <h4>Click each item for more details</h4> -->
-My research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions. In the recent times, my team has been studying kinetics of oxygenated fuels, which being renewable and resulting in reduced emissions, are immediately relevant to the country's energy needs. 
+Our research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions. In the recent times, my team has been studying kinetics of oxygenated fuels, which being renewable and resulting in reduced emissions, are immediately relevant to the country's energy needs. 
 </br> </br> <i>If you are interested in being a part of our team, peruse the list of available projects to identify your interests and write to me with a subject line that includes the title of the topic.</i>
 
 <td width="25%">
@@ -410,7 +404,7 @@ data of major species, dashed lines: simulations
 	<h4>Shanmugasundaram D</h4>
 	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 </center>
-Shanmugasundaram obtained his B. Tech and M.tech in Mechanical Engineering from Pondicherry Engineering College, Puduchery in 2014 and 2016 respectively. He is currently pursuing his PhD at IIT Madras. His project revolves around chemical kinetic modeling and reactive simulations of fuels relevant to fire research, one among them being methylmethacrylate. His thesis is co-advised by Dr. V. Raghavan at IIT Madras.
+Shanmugasundaram obtained his B. Tech and M. Tech in Mechanical Engineering from Pondicherry Engineering College, Puduchery in 2014 and 2016 respectively. He is currently pursuing his PhD at IIT Madras. His project revolves around chemical kinetic modeling and reactive simulations of fuels relevant to fire research, one among them being methylmethacrylate. His thesis is co-advised by Dr. V. Raghavan at IIT Madras.
 </p></br>
 	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </ul>
