--- a/project_writeup/MS_PhD_Winter_2017.html
+++ b/project_writeup/MS_PhD_Winter_2017.html
@@ -42,7 +42,7 @@ Strong desire to pick up combustion kinetics concepts (no prior familiarity is r
 <tr>
 <td width="100%">
 <h3> Reduced Reaction Models For Combustion </h3> 
-Reaction mechanisms that describe the oxidation of a fuel are huge with several thousands of individual steps. While using them in computations, compact representation of these schemes are essential. This project initially involves developing a black box tool to reduce reaction mechanisms based on existing ideas. Improvements will be suggested to existing methods, their pros and cons will be evaulated, and the perfect order in which they must be applied to achieve best results will be investigated.
+Reaction mechanisms that describe the oxidation of a fuel are huge with several thousands of individual steps. While using them in computations, compact representations of these schemes are essential. This project involves developing a black box tool to reduce reaction mechanisms based on existing ideas as the first step. Improvements will be suggested to existing methods, their pros and cons will be evaulated, and the perfect order in which they must be applied to achieve best results will be investigated.
 
 
 <h3>Pre-requisite</h3>
@@ -57,7 +57,7 @@ Penchant for writing stand-alone codes and interest in combustion
 <td width="100%">
 <h3> Optimization in Combustion </h3> 
 
-The progress rates of individual steps in the oxidation of fuels are uncertain. In combustion studies, an optimized model is arrived at by taking these uncertainties into account. This project initially involves developing a black box tool to optimize reaction schemes based on existing ideas. A starting point will be the in-house code -- <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization" style="color: rgb(0,0,255)">Reaction mechanism optimization</a>. Improvements will be suggested to existing methods to achieve reduced computational cost as well ensure physical meaning in the optimized models.
+The progress rates of individual steps in the oxidation of fuels are uncertain. In combustion studies, optimized models are arrived at by taking these uncertainties into account. This project involves developing a black box tool to optimize reaction schemes based on existing ideas to begin with. A starting point will be the in-house code -- <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization" style="color: rgb(0,0,255)">Reaction mechanism optimization</a>. Improvements will be suggested to existing methods to achieve reduced computational cost as well ensure physical meaning in the optimized models.
 
 <h3>Pre-requisite</h3>
 Penchant for writing stand-alone codes and interest in combustion
@@ -69,7 +69,7 @@ Penchant for writing stand-alone codes and interest in combustion
 <tr>
 <td width="100%">
 <h3> Biodiesel Combustion </h3>
-Biodiesel is being increasingly used in combination with diesel fuel in CI engines because of being renewable and resulting in reduced emissions. This project focuses on a fundamental study to identify the importance of different constituents in biodiesel and develop a kinetic model to describe its oxidation. This opens up options to study blends of biodiesel with diesel fuel as well. 
+Biodiesel is being increasingly used in combination with diesel fuel in CI engines because of being renewable and resulting in reduced emissions. This project focuses on a fundamental study to identify the importance of different constituents in biodiesel and thereby develop a kinetic model to describe its oxidation. This opens up options to study blends of biodiesel with diesel fuel as well. 
 
 <h3>Pre-requisite</h3>
 Strong desire to pick up combustion kinetics concepts (no prior familiarity is required)
