Project write up liquid phase

--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@ Write-up coming soon ...
 	<li> Development of structure based compact reaction models
 	<li> Development of canonical kinetics solvers and post-processing tools
 	<li> Simulation driven surrogate formulation
-	<li> Defining surrogate for liquid-phase applications
+	<li> <a href="project_writeup/Surrogate_Spherosymmetric_Droplet_Vaporization.html" target="_blank">  Surrogate for liquid-phase applications
 	<li> Thermodynamic property estimation for cyclic species
 </ul>
 
