Project write up liquid phase

--- a/project_writeup/Surrogate_Spherosymmetric_Droplet_Vaporization.html
+++ b/project_writeup/Surrogate_Spherosymmetric_Droplet_Vaporization.html
@@ -26,5 +26,6 @@ In this project, numerical solution procedure to predict the droplet burning acc
 
 <h2>Pre-requisite</h2>
 MS students under the ID category <br>
-Liking to write stand alone solvers and a strong desire to pick up combustion kinetics concepts (no prior familiarity is required for kinetics).  
+Liking to write stand alone solvers <br>
+Strong desire to pick up combustion kinetics concepts (no prior familiarity is required for kinetics).  
 </body></html>
