--- a/index.html
+++ b/index.html
@@ -240,9 +240,10 @@ image2.src = "images/img4.jpg"
 <td width="50%">
 <h2>Krithika Narayanaswamy</h2>
 Assistant Professor<br>
-<a href="https://mech.iitm.ac.in/meiitm/" target="_blank">Department of Mechanical Engineering</a><br>
-<a href="https://www.iitm.ac.in/" target="_blank">Indian Institute of Technology Madras</a><br>
+<a href="#Current_Research">Computational Chemistry & Combustion group</a>,<br>
 Thermodynamics and Combustion Engines Lab,<br>
+<a href="https://mech.iitm.ac.in/meiitm/" target="_blank">Department of Mechanical Engineering</a>,<br>
+<a href="https://www.iitm.ac.in/" target="_blank">Indian Institute of Technology Madras</a>,<br>
 Chennai - 600036<br>
 Email: krithika (at) iitm (dot) ac (dot) in<br>
 <!-- krithika.n (at) alumni (dot) stanford (dot) edu<br>
