--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ image2.src = "images/img4.jpg"
 <td width="50%">
 <h2>Krithika Narayanaswamy</h2>
 Assistant Professor<br>
-<a href="#Current_Research">Computational Chemistry & Combustion group</a>,<br>
+<a href="#Group">Computational Chemistry & Combustion group</a>,<br>
 Thermodynamics and Combustion Engines Lab,<br>
 <a href="https://mech.iitm.ac.in/meiitm/" target="_blank">Department of Mechanical Engineering</a>,<br>
 <a href="https://www.iitm.ac.in/" target="_blank">Indian Institute of Technology Madras</a>,<br>
@@ -329,7 +329,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <tr>
 <td>
 
-<h2>Research Team</h2>
+<h2 id="Group">Research Team</h2>
 <!-- <h4>Click each item for more details</h4> -->
 Our research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions. In the recent times, my team has been studying kinetics of oxygenated fuels, which being renewable and resulting in reduced emissions, are immediately relevant to the country's energy needs. 
 </br> </br> <i>If you are interested in being a part of our team, peruse the list of available projects to identify your interests and write to me with a subject line that includes the title of the topic.</i>
