--- a/index.html
+++ b/index.html
@@ -326,9 +326,14 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <div id="Current_Research" class="tabcontent">
 </tr>
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
+<tr> 
+<td width="100%">
+<center><img src="./images/logo.pdf" width="600">
+</td>
+</tr>
+
 <tr>
 <td>
-
 <h2 id="Group">Research Team</h2>
 <!-- <h4>Click each item for more details</h4> -->
 Our research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions. In the recent times, my team has been studying kinetics of oxygenated fuels, which being renewable and resulting in reduced emissions, are immediately relevant to the country's energy needs. 
