--- a/index.html
+++ b/index.html
@@ -324,14 +324,9 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 
 <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 <div id="Current_Research" class="tabcontent">
-</tr>
-<table border="1" cellspacing="1" cellpadding="5" width="100%">
-<tr> 
-<td width="100%">
-<center><img src="./images/logo.pdf" width="600">
-</td>
-</tr>
+	<center><img src="./images/logo.png" width="600">
 
+<table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
 <h2 id="Group">Research Team</h2>
