--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@ image2.src = "images/img4.jpg"
 
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'Home')" id="defaultOpen">Home</button>
-  <button class="tablinks" onclick="openCity(event, 'Current_Research')" id="Research">Research Team and Activities</button>
-  <button class="tablinks" onclick="openCity(event, 'Publications')" id="Pub">Publications</button>
-  <button class="tablinks" onclick="openCity(event, 'Available_Projects')" id="Proj">Available Projects</button>
-  <button class="tablinks" onclick="openCity(event, 'Teaching')" id="Teach">Teaching</button>
-  <button class="tablinks" onclick="openCity(event, 'Others')" id="Others">Others</button>
+  <button class="tablinks" onclick="openCity(event, 'Current_Research')" id="idResearch">Research Team and Activities</button>
+  <button class="tablinks" onclick="openCity(event, 'Publications')">Publications</button>
+  <button class="tablinks" onclick="openCity(event, 'Available_Projects')">Available Projects</button>
+  <button class="tablinks" onclick="openCity(event, 'Teaching')">Teaching</button>
+  <button class="tablinks" onclick="openCity(event, 'Others')">Others</button>
 </div>
 
 <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
@@ -240,7 +240,7 @@ image2.src = "images/img4.jpg"
 <td width="50%">
 <h2>Krithika Narayanaswamy</h2>
 Assistant Professor<br>
-<a href="#Current_Research">Computational Chemistry & Combustion group</a>,<br>
+<a href="#idResearch"> Computational Chemistry & Combustion group </a>,<br>
 Thermodynamics and Combustion Engines Lab,<br>
 <a href="https://mech.iitm.ac.in/meiitm/" target="_blank">Department of Mechanical Engineering</a>,<br>
 <a href="https://www.iitm.ac.in/" target="_blank">Indian Institute of Technology Madras</a>,<br>
