--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ image2.src = "images/img4.jpg"
 
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'Home')" id="defaultOpen">Home</button>
-  <button class="tablinks" onclick="openCity(event, 'Current_Research')" id="idResearch">Research Team and Activities</button>
+  <button class="tablinks" onclick="openCity(event, 'Current_Research')">Research Team and Activities</button>
   <button class="tablinks" onclick="openCity(event, 'Publications')">Publications</button>
   <button class="tablinks" onclick="openCity(event, 'Available_Projects')">Available Projects</button>
   <button class="tablinks" onclick="openCity(event, 'Teaching')">Teaching</button>
@@ -272,7 +272,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <tr>
 	<td width="100%">
 	My research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions.   
-</br> </br> <i>If you are interested in being a part of our team, peruse the list of available projects to identify your interests and write to me with a subject line that includes the title of the topic.</i>
+</br> </br> <i>If you are interested in being a part of our team, peruse the list of <a href="#" onclick="openCity(event, 'Available_Projects')"> available projects</a> to identify your interests and write to me with a subject line that includes the title of the topic.</i>
 </td>
 </tr>
 </table>
@@ -332,7 +332,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <h2 id="Group">Research Team</h2>
 <!-- <h4>Click each item for more details</h4> -->
 Our research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions. In the recent times, my team has been studying kinetics of oxygenated fuels, which being renewable and resulting in reduced emissions, are immediately relevant to the country's energy needs. 
-</br> </br> <i>If you are interested in being a part of our team, peruse the list of available projects to identify your interests and write to me with a subject line that includes the title of the topic.</i>
+</br> </br> <i>If you are interested in being a part of our team, peruse the list of <a href="#" onclick="openCity(event, 'Available_Projects')"> available projects</a> to identify your interests and write to me with a subject line that includes the title of the topic.</i>
 
 <td width="25%">
 	<center><img src="./images/krithika.png" width="170">	</center> </br> </br>
