--- a/index.html
+++ b/index.html
@@ -416,6 +416,24 @@ Shanmugasundaram obtained his B. Tech and M. Tech in Mechanical Engineering from
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
+<h2>Collaborations</h2>
+<ul>
+<li> <a href="http://sivaramambikasaran.com"> Dr. Sivaram Ambikasaran</a>, Department of Mathematics, IIT Madras</br>
+<li> Dr. V. Raghavan, Department of Mechanical Engineering, IIT Madras</br>
+<li> <a href="https://home.iitm.ac.in/anand_k/"> Dr. K. Anand, Department of Mechanical Engineering, IIT Madras</br>
+<li> <a href="http://jacobsschool.ucsd.edu/faculty/faculty_bios/index.sfe?fmp_recid=153"> Prof. Kalyanasundaram Seshadri</a>, University of San Diego</br>
+<li> <a href="https://www.ptb.de/cms/en/ptb/fachabteilungen/abt3/fb-33/ravi-fernandes.html">Prof. Ravi Fernandes</a>, Physikalisch-Technische Bundesanstalt</br>
+<li> <a href="https://pepiot.mae.cornell.edu"> Dr. Perrine Pepiot</a>, Cornell University</br>
+<li> <a href="https://www.itv.rwth-aachen.de/index.php?id=46">Prof. Heinz Pitsch</a>, RWTH Aachen</br>
+</ul>
+</td>
+</tr>
+</table>
+
+
+<table border="1" cellspacing="1" cellpadding="5" width="100%">
+<tr>
+<td>
 <h2>Alumni</h2>
 <ul>
 <li> M. C. Sanjay (M. Tech 2017): <i> SMILES based interface to Thermodynamic Property Estimation Using THERM</br></i>
